Alpha 0.1.8.48
- Add support for MC 1.20.2.

Alpha 0.1.8.47
- Fix NMS code broken on recent builds of Spigot (and forks). Thanks, SlimeDog, for the bug report!
- Drop support for Konquest. It turns out that the hook had been broken for a while, and I haven't received any reports about it. If you're still using Konquest, please let me know!
- Do not allow doors to be toggled before all plugins have been enabled. This fixes timeout issues caused by the scheduler not running yet. Thanks, SlimeDog, for the bug report!

Alpha 0.1.8.46
- Add support for Minecraft 1.20.
- Fix modern (1.13+) stairs not being rotated correctly. Thanks, Tuchan, for the bug report!

Alpha 0.1.8.45
- Improve the process to export the database to the new format used by AnimatedArchitecture (v2).

Alpha 0.1.8.44
- Add 1.19.4 support.
- Add support for PlotSquared 7. Thanks, Bloody_Mind, for the suggestion!
- Added the "/BigDoors PrepareDatabaseForV2" command. This will export your database to the format used by v2. Note that both the export and v2 are still experimental!
- Fix rare issue with retrieving permissions for offline players that could result in a server crash. Thanks, VikEnd, for the bug report!
- BREAKING API CHANGE: The return value of attempting to toggle a door is now a CompletableFuture. The old (now deprecated) methods still exist, but may return an ERROR state despite the door toggling just fine (eventually).

Alpha 0.1.8.43
- Fix startup issue on older versions of MC. Thanks, Trombettino, for the report!
- Add config option to change how to count the number of doors a player owns (defaults to only include doors created by the player). Thanks, Chris6ix, for the suggestion!

Alpha 0.1.8.42
- Write changelog to console when update is available.
- Add some functionality to aid the exciting new physics addon: https://github.com/bonn2/BigDoorsPhysics
- Add 1.19 resource packs.

Alpha 0.1.8.41
- Add support for MC 1.19.3.